--- a/src/theme.scss
+++ b/src/theme.scss
@@ -2,4 +2,7 @@ $color-primary: $palette-blue-500 !default;
 $color-primary-dark: $palette-blue-800 !default;
 $color-primary-light: $palette-blue-300 !default;
 
+$color-accent: $palette-blue-a200 !default;
+$color-accent-dark: $palette-blue-700 !default;
+
 $color-content: #fafafa;
